Fix overflow in document sidebar

--- a/src/assets/scss/document_annotations.scss
+++ b/src/assets/scss/document_annotations.scss
@@ -3,7 +3,6 @@
 #document-annotations {
   font-family: variables.$font-family;
   background-color: variables.$background;
-  overflow-y: auto;
   position: relative;
   display: flex;
   flex-direction: column;
